# cppknife

./: .gitignore  BuildDebug  CHANGELOG.md  CMakeLists.txt  Clear  CreateRelease  Debug  Doxyfile  README.md  Release  UpdateHelp  config.h  config.h.in  cppknife.doxy
basic/: BaseRandom.cpp  BaseRandom.hpp  CharRandom.cpp  CharRandom.hpp  InternalError.cpp  InternalError.hpp  Logger.cpp  Logger.hpp  PortableRandom.cpp  PortableRandom.hpp  StringTool.cpp  StringTool.hpp  TimeTool.cpp  TimeTool.hpp
core/: ByteStorage.cpp  ByteStorage.hpp  KissRandom.cpp  KissRandom.hpp  Storage.cpp  Storage.hpp
db/: MySql.cpp  MySql.hpp  Postgres.cpp  Postgres.hpp  SqlDriver.cpp  SqlDriver.hpp  db.hpp
debian/: Basic  Build  Full  basic.bookworm.json  basic.bullseye.json  basic.json  full.bookworm.json  full.bullseye.json  full.json
debian/cppknife-0.6.6/DEBIAN/: control  postinst  postrm  prerm
debian/cppknife-0.6.6/usr/share/cppknife-0.6.6/core/: Storage.hpp  core.hpp
debian/cppknife-0.6.6/usr/share/cppknife-0.6.6/text/: Base64.hpp  LineList.hpp  LinesStream.hpp  Matcher.hpp  text.hpp
debian/cppknife-0.6.6/usr/share/cppknife-0.6.6/tools/: ArgumentParser.hpp  Scheduler.hpp  SecretConfiguration.hpp  VeilEngine.hpp  dbknife.hpp  geoknife.hpp  netknife.hpp
debian/cppknife-full-0.6.6/DEBIAN/: control  postinst  postrm  prerm
debian/cppknife-full-0.6.6/usr/share/cppknife-0.6.6/: textknife
debian/cppknife-full-0.6.6/usr/share/cppknife-0.6.6/basic/: CharRandom.hpp  TimeTool.hpp  basic.hpp
debian/cppknife-full-0.6.6/usr/share/cppknife-0.6.6/core/: KissRandom.hpp
debian/cppknife-full-0.6.6/usr/share/cppknife-0.6.6/db/: MySql.hpp  Postgres.hpp  SqlDriver.hpp
debian/cppknife-full-0.6.6/usr/share/cppknife-0.6.6/geo/: GeoHelper.hpp
debian/cppknife-full-0.6.6/usr/share/cppknife-0.6.6/net/: Agents.hpp  SocketClient.hpp
debian/cppknife-full-0.6.6/usr/share/cppknife-0.6.6/os/: FileTool.hpp  os.hpp
debian/cppknife-full-0.6.6/usr/share/cppknife-0.6.6/text/: LineReader.hpp  Script.hpp  StringList.hpp
debian/cppknife-full-0.6.6/usr/share/cppknife-0.6.6/tools/: ServuseTasks.hpp  SvgTool.hpp  fileknife.hpp  textknife.hpp
debian/scripts/: postinst  postinst2  prerm  prerm2
doc/: file_statements.md  fileknife.md  functions.md  geoknife.md  searchengine.md  sesknife.md  textknife.md
doc/programs/: dbknife.md  fileknife.md  textknife.md
doc/scripting/: basic_statements.md
doxygen/: R
doxygen/basic/: Doxyfile
doxygen/core/: Doxyfile
doxygen/db/: Doxyfile
doxygen/geo/: Doxyfile
doxygen/os/: Doxyfile
doxygen/text/: Doxyfile
doxygen/tools/: Doxyfile
geo/: GeoException.cpp  GeoException.hpp  GeoHelper.cpp  GeoHelper.hpp  GpsTranslator.cpp  GpsTranslator.hpp  Point2D.cpp  Point2D.hpp  Rectangle.cpp  Rectangle.hpp  Shape.cpp  Shape.hpp  geo.hpp
linux/: install.sh
net/: Agents.cpp  SocketClient.cpp  SocketClient.hpp  SocketServer.cpp  SocketServer.hpp  net.hpp
os/: File.cpp  File.hpp  FileDb.cpp  FileDb.hpp  FileTool.cpp  FileTool.hpp  LineAgent.cpp  LineAgent.hpp  OsException.cpp  OsException.hpp  Path.cpp  Path.hpp  Process.cpp  Process.hpp  Traverser.cpp  Traverser.hpp  os.hpp
releases/: InstallOrUpdate.sh  cppknife-0.6.4_amd64.deb  cppknife.amd64.tgz  readme.txt
releases/amd64/: InstallOrUpdate.sh  dbknife  fileknife  geoknife  netknife  sesknife  textknife
resources/ses/: c-standard-header-mktest.ses  c-standard-header.md  c-standard-header.ses  help-to-md.md  help-to-md.ses
text/: Base64.cpp  Base64.hpp  Configuration.cpp  Configuration.hpp  CsvFile.cpp  CsvFile.hpp  FunctionEngine.cpp  FunctionEngine.hpp  JsonReader.cpp  JsonReader.hpp  LineList.cpp  LineList.hpp  LineReader.cpp  LineReader.hpp  LinesStream.cpp  LinesStream.hpp  Matcher.cpp  Matcher.hpp  NodeJson.cpp  NodeJson.hpp  Parser.cpp  Parser.hpp  ParserError.cpp  ParserError.hpp  Script.cpp  Script.hpp  SearchEngine.cpp  SearchEngine.hpp  StringList.cpp  StringList.hpp  text.hpp
tools/: ArgumentParser.cpp  ArgumentParser.hpp  Scheduler.cpp  Scheduler.hpp  SecretConfiguration.cpp  SecretConfiguration.hpp  ServuseTasks.cpp  ServuseTasks.hpp  SvgTool.cpp  SvgTool.hpp  ToolsCommons.cpp  ToolsCommons.hpp  VeilEngine.cpp  VeilEngine.hpp  cppknife.cpp  dbknife.cpp  dbknife_main.cpp  fileknife.cpp  fileknife_main.cpp  geoknife.cpp  geoknife_main.cpp  netknife.cpp  netknife_main.cpp  sesknife.cpp  sesknife.hpp  sesknife_main.cpp  textknife.cpp  textknife_main.cpp  tools.hpp
unittest/: Agents_test.cpp  ArgumentParser_test.cpp  Base64_test.cpp  BaseRandom_test.cpp  ByteStorage_test.cpp  CharRandom_test.cpp  Configuration_test.cpp  CsvFile_test.cpp  FileDb_test.cpp  FileTool_test.cpp  File_test.cpp  FunctionEngine_test.cpp  GeoHelper_test.cpp  GpsTranslator_test.cpp  InternalError_test.cpp  JsonReader_test.cpp  KissRandom_test.cpp  LineAgent_test.cpp  LineList_test.cpp  LineReader_test.cpp  LinesStream_test.cpp  Logger_test.cpp  Matcher_test.cpp  MySql_test.cpp  NodeJson_test.cpp  OsException_test.cpp  Parser_test.cpp  Path_test.cpp  Point2D_test.cpp  PortableRandom_test.cpp  Postgres_test.cpp  Process_test.cpp  Rectangle_test.cpp  Script_test.cpp  SearchEngine_test.cpp  SecretConfiguration_test.cpp  ServuseTasks_test.cpp  Shape_test.cpp  SocketServer_test.cpp  SqlDriver_test.cpp  (+18 more)
